libretto/static/css/styles.less
/* ... */
p {
  text-align: justify;
  .text-center & {
    text-align: center;
  }
  .text-right & {
    text-align: right;
  }
}

mark, .mark {
  background-color: @brand-danger;
  color: white;
  padding: 0;
}

.lead {
  color: @link-color;
  margin-bottom: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: inherit;

  @media (min-width: @screen-sm-min) {
    font-size: inherit;
  }
}

.thumbnail {
  margin-bottom: 0;
}

.fa.default-avatar {
  font-size: 92px;
  color: lightgray;
  &:before {
    content: @fa-var-user;
  }
}

.well {
  :first-child {
    margin-top: 0;
  }
}

.row.facts {
  text-align: center;
  margin-bottom: @grid-gutter-width;
  .fact-container {
    display: table !important;
    height: 250px;
    @media(max-width: @screen-sm-max) {
      &:not(:last-of-type) {
        margin-bottom: @grid-gutter-width;
      }
    }
    .fact {
      display:table-cell;
      vertical-align: middle;
    }
  }
  p {
    text-align: inherit;
  }
}

.sc {
  .small-caps;
}

sup {
  top: -0.3em;
}

cite {
  font-style: italic;
}

.btn.disabled {
  pointer-events: auto;
}

.btn-link {
  color: @btn-link-color;
  &, &.disabled {
    &:hover, &:focus {
      color: @btn-link-hover-color;
    }
  }
}

.fa.fa-square-o {
  &:before {
    content: @fa-var-square-o;
  }
  .active &:before {
    content: @fa-var-check-square-o;
  }
}

.title-header {
  padding: 0;
  #slogan {
    font-family: @font-family-serif;
    font-style: italic;
    font-size: @font-size-h2;
    #slogan-buttons {
      display: inline-block;
      font-size: @font-size-base;
      .btn {
        position: relative;
        top: -2px;
        margin-top: 2px;
        margin-bottom: 2px;
        padding: 1px 6px;
        width: 27px;
        &:first-of-type {
          margin-left: @grid-gutter-width / 2;
        }
        img {
          vertical-align: -3px;
        }
      }
    }
  }
}

#carousel-home {
  margin-bottom: @grid-gutter-width;
}

.carousel {
  @border-radius: @border-radius-large;
  .carousel-inner {
    border-radius: @border-radius;
    .carousel-background {
      background: hsv(0, 0%, 90%);
      img {
        height: 450px;
      }
    }
  }
  .carousel-caption {
    @font-size-ratio-xs-sm: 1.5;
    @font-size-ratio-md: 1.7;
    @font-size-ratio-lg: 2.0;
    .responsive-font-size(@font-size) {
      @media (max-width: @screen-sm-max) {
        font-size: round(@font-size * @font-size-ratio-xs-sm);
      }
      @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
        font-size: round(@font-size * @font-size-ratio-md);
      }
      @media (min-width: @screen-lg-min) {
        font-size: round(@font-size * @font-size-ratio-lg);
      }
    }

    display: inline-block;
    left: @carousel-control-width;
    right: @carousel-control-width;
    bottom: 10%;
    text-align: inherit;
    header, article {
      display: inline-block;
    }
    &.text-background {
      &>* {
        padding-left: @padding-large-horizontal;
        padding-right: @padding-large-horizontal;
      }
      header, article {
        background: fadeout(@navbar-default-bg, 25%);
      }
    }
    header {
      .small-caps;
      padding-bottom: 10px;
    }
    article {
      font-family: @font-family-serif;
      font-style: italic;
      padding-top: 10px;
      .responsive-font-size(@font-size-base);
    }
    h1 {
      .responsive-font-size(@font-size-h1);
    }
    h2 {
      .responsive-font-size(@font-size-h2);
    }
    .read-more {
      display: block;
      margin-top: 20px;
    }
  }
  .carousel-control {
    z-index: 15;
    &.left, &.right {
      background: none;
      .fa {
        position: absolute;
        top: 50%;
        width: @carousel-control-font-size;
        height: @carousel-control-font-size;
        margin-top: -@carousel-control-font-size / 2;
        margin-left: -@carousel-control-font-size / 2;
      }
    }
    &.left {
      .border-left-radius(@border-radius);
    }
    &.right {
      .border-right-radius(@border-radius);
    }
  }
  .carousel-indicators {
    li {
      box-shadow: 0px 0px 5px grey;
      &.active {
        background-color: @brand-primary;
      }
    }
  }
}

.home-partners-list {
  display: flex;
  flex-flow: row wrap;
  align-items: stretch;
  margin: 0 -@grid-gutter-width/2;
  .partner {
    flex: 0 0 calc(percentage(1/3) ~'-' @grid-gutter-width);
    margin: 0 @grid-gutter-width/2;
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: center;
    margin-bottom: @grid-gutter-width;
    img {
      height: 60px;
    }
    .with-info-link {
      margin-left: 19px;
    }
  }
}

blockquote {
  font-size: @font-size-base;
}

dl {
  dt {
    color: grey;
    font-weight: normal;
  }
  dd {
    padding-left: 20px;
    &+dt {
      padding-top: 8px;
    }
    p:last-child {
      margin-bottom: 0px;
    }
  }
}

#sidebar {
  dl:last-child {
    margin-bottom: 0;
  }
}

.dossier {
  font-family: @font-family-serif;

  .presentation {
    font-size: round(@font-size-base * 1.2);
  }
  h2 {
    margin-top: floor(@font-size-h2 * @line-height-large);
    margin-bottom: floor(@font-size-h2 * @line-height-large / 2);
  }
}

.fa () {
  display: inline-block;
        font-family: FontAwesome;
        font-style: normal;
        font-weight: normal;
        line-height: 1;
        -webkit-font-smoothing: antialiased;
        -moz-osx-font-smoothing: grayscale;
}
/* ... */

